; ModuleID = '/home/carl/AnghaBench/vlc/src/interface/extr_interface.c_libvlc_GetMainPlaylist.c'
source_filename = "/home/carl/AnghaBench/vlc/src/interface/extr_interface.c_libvlc_GetMainPlaylist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @libvlc_GetMainPlaylist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @libvlc_GetMainPlaylist(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.TYPE_3__* @libvlc_priv(i32* %5)
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = call i32 @vlc_mutex_lock(i32* %8)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %31

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @VLC_OBJECT(i32* %18)
  %20 = call i32* @vlc_playlist_New(i32 %19)
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  store i32* %20, i32** %22, align 8
  store i32* %20, i32** %4, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %30

25:                                               ; preds = %17
  %26 = load i32*, i32** %4, align 8
  %27 = load i32*, i32** %2, align 8
  %28 = call i32 @VLC_OBJECT(i32* %27)
  %29 = call i32 @PlaylistConfigureFromVariables(i32* %26, i32 %28)
  br label %30

30:                                               ; preds = %25, %17
  br label %31

31:                                               ; preds = %30, %1
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = call i32 @vlc_mutex_unlock(i32* %33)
  %35 = load i32*, i32** %4, align 8
  ret i32* %35
}

declare dso_local %struct.TYPE_3__* @libvlc_priv(i32*) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32* @vlc_playlist_New(i32) #1

declare dso_local i32 @VLC_OBJECT(i32*) #1

declare dso_local i32 @PlaylistConfigureFromVariables(i32*, i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
